--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 
 
-version: '3.8' # Usar una versión más reciente es recomendable
+version: '3.8'
 
 services:
   webnode: 
-    container_name: example # Corregido
+    container_name: example
     restart: always
     build: .
     ports:
@@ -17,11 +17,11 @@ services:
       - .:/usr/src/app
 
   mongo: 
-    container_name: mongodb # Corregido
+    container_name: mongodb
     image: mongo:latest
     restart: unless-stopped
     ports:
-      - "27676:27017" # Mapea el puerto 27017 del contenedor al puerto 27676 del host
+      - "27676:27017"
     volumes:
       - mongo-data:/data/db
     networks:
